    + Remise en forme de de l'affichage des différentes partie des logs pour que la page ne bouge plus quand on choisis un affichage par mois ou par jour
    + Ajout d'un texte annoncant la suppréssion en cours d'une base de logs dans la fênetre de suppréssion des logs
    + Modification de la gestion des mises à jour qui renvoie vers le site cultibox pour le téléchargement des fichiers

-- Yann Genevois <yann.genevois@cultibox.fr> Tue Sep  3 11:43:25 CEST 2013


Cultibox (1.1.32) precise; urgency=low
    + Passage du CSS au W3C pour respecter les standards

-- Yann Genevois <yann.genevois@cultibox.fr>  Mon Sep  2 16:47:46 CEST 2013


Cultibox (1.1.31) precise; urgency=low
    + Correction de la configuration du type de prise dans le wizard

-- Yann Genevois <yann.genevois@cultibox.fr>  Tue Aug 27 11:51:14 CEST 2013


Cultibox (1.1.30) precise; urgency=low 
    + Correction des accents sur les notes en français uniquement pour les updates
    + Ajout des dosages d'engrais dans le calendrier
    + Ajout de deux fichiers XML de programme pour le calendrier créés par "fastenspy"

-- Yann Genevois <yann.genevois@cultibox.fr>  Thu Aug  8 23:00:52 CEST 2013


Cultibox (1.1.29) precise; urgency=low
    + Correction des accents sur Mac et concernant la partie Notes
    + Ajout de la librairie scrollTo JQUERY pour gérer le déplacement des fenêtres après une action
    + Ajout d'un message d'erreur si aucun capteur n'est selectionné pour la régulation
    + Ajout de la possibilité de configurer le type de puissance max d'une prise dans l'assistant
    + Ajout d'un bouton dans la partie prise qui permet de configurer la prise actuelle à l'aide de l'assistant
    + Ajout d'un tooltip d'explication sur l'option d'envoie d'informations
    + Ajout des evènements dans le calendrier depuis les fichiers d'engrais XML

-- Yann Genevois <yann.genevois@cultibox.fr>  Fri Aug  2 10:30:41 CEST 2013


Cultibox (1.1.28) precise; urgency=low